# SUEP-Algowork

./: .gitignore  .md  LICENSE  README.md  complete_experiment.py  main.py  pyproject.toml
experiment_20251231_032035/: SUMMARY.txt
experiment_20251231_032035/data/: baseline_results.json  lhns_results.json
experiment_modules/: experiment_coordinator.py  lhns_runner.py  visualizer.py
src/lhns/: run_lhns.py
src/lhns/llm/: api_general.py
src/lhns/logs/20251231_032035_tsp_construct_white-box_ils/: run_log
src/lhns/logs/20251231_032035_tsp_construct_white-box_ils/history/: tsp_construct_white-box_ils_1.json
src/lhns/logs/20251231_032035_tsp_construct_white-box_ils/history_best/: tsp_construct_white-box_ils_1.json
src/lhns/logs/20251231_032035_tsp_construct_white-box_ils/src/: __init__(23).py  complete_experiment(0).py  lhns_runner.py  log_utils.py  prompts_black.py  result_manager.py  run.py
src/lhns/logs/20251231_032035_tsp_construct_white-box_ts/: run_log
src/lhns/logs/20251231_032035_tsp_construct_white-box_ts/history/: tsp_construct_white-box_ts_1.json
src/lhns/logs/20251231_032035_tsp_construct_white-box_ts/history_best/: tsp_construct_white-box_ts_1.json
src/lhns/logs/20251231_032035_tsp_construct_white-box_ts/src/: experiment_coordinator.py  lhns(0).py  lhns.py  traditional_solvers.py  (+1 more)
src/lhns/logs/20251231_032035_tsp_construct_white-box_vns/: run_log
src/lhns/methods/: methods.py
src/lhns/methods/lhns/: evaluator_accelerate.py  lhns.py  lhns_interface.py  lhns_prompt.py
src/lhns/problems/: problems.py
src/lhns/utils/: getParas.py
(+25 files in other folders)
