[project]
name = "lhns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "func-timeout>=4.3.5",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "seaborn"
]
